--- a/SunamoNumbers.csproj
+++ b/SunamoNumbers.csproj
@@ -3,16 +3,20 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.1.7.1</Version>
-	  <Description>Generating, calculating with numbers</Description>
+    <Version>24.1.14.1</Version>
+    <Description>Generating, calculating with numbers</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SunamoBts" Version="24.1.5.1" />
-    <PackageReference Include="SunamoCollectionsGeneric" Version="24.1.5.1" />
-    <PackageReference Include="SunamoExceptions" Version="24.1.5.1" />
-    <PackageReference Include="SunamoExtensions" Version="24.1.5.1" />
-    <PackageReference Include="SunamoStringReplace" Version="24.1.5.1" />
-    <PackageReference Include="SunamoTextOutputGenerator" Version="24.1.7.1" />
+    <PackageReference Include="SunamoBts" Version="24.1.13.2" />
+    <PackageReference Include="SunamoCollectionsGeneric" Version="24.1.10.1" />
+    <PackageReference Include="SunamoData" Version="24.1.12.2" />
+    <PackageReference Include="SunamoExceptions" Version="24.1.11.1" />
+    <PackageReference Include="SunamoExtensions" Version="24.1.10.1" />
+    <PackageReference Include="SunamoStringReplace" Version="24.1.10.1" />
+    <PackageReference Include="SunamoTextOutputGenerator" Version="24.1.10.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
