Before create submodules from remain projects

--- a/SunamoNumbers.csproj
+++ b/SunamoNumbers.csproj
@@ -11,11 +11,15 @@
     <RepositoryUrl>https://github.com/sunamo/SunamoNumbers.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoNumbers</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoNumbers;SunamoNumbers.csproj</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoNumbers</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoNumbers;SunamoNumbers.csproj</DefineConstants>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="readme.md" Pack="True" PackagePath="." />
+  </ItemGroup>
 </Project>
