--- a/SunamoNumbers/SunamoNumbers.csproj
+++ b/SunamoNumbers/SunamoNumbers.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <None Include="readme.md" Pack="True" PackagePath="." />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" Pack="True" />
+    <PackageReference Include="xunit" Version="2.9.3" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
