--- a/SunamoNumbers/SunamoNumbers.csproj
+++ b/SunamoNumbers/SunamoNumbers.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>25.12.22.1</Version>
+    <Version>25.12.31.1</Version>
     <Description>Generating, calculating with numbers</Description>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
@@ -13,7 +13,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>feat: Upgrade to net10.0</PackageReleaseNotes>
+    <PackageReleaseNotes>feat: better naming for variables</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
